--- a/Kinect/Kinect_neu/.classpath
+++ b/Kinect/Kinect_neu/.classpath
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_151"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/vince/Downloads/KinectPV2-0.7.2/KinectPV2/library/KinectPV2.jar" sourcepath="C:/Users/vince/Downloads/KinectPV2-0.7.2/KinectPV2/library/KinectPV2.jar">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Users/vince/Downloads/KinectPV2-0.7.2/KinectPV2/library"/>
+			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/vince/Downloads/processing-3.3.6/core/library/core.jar"/>
-	<classpathentry kind="lib" path="C:/Users/vince/Downloads/processing-3.3.6/core/library/gluegen-rt.jar"/>
-	<classpathentry kind="lib" path="C:/Users/vince/Downloads/processing-3.3.6/core/library/jogl-all.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/OpenCV 2"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/Fabian/Desktop/Java Libs/KinectPV2/library/KinectPV2.jar" sourcepath="C:/Users/vince/Downloads/KinectPV2-0.7.2/KinectPV2/library/KinectPV2.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Users/Fabian/Desktop/Java Libs/KinectPV2/library"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Fabian/Desktop/Java Libs/core/library/core.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Fabian/Desktop/Java Libs/core/library/jogl-all.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Fabian/Desktop/Java Libs/core/library/gluegen-rt.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Fabian/Desktop/Java Libs/build/java/opencv-2413.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Users/Fabian/Desktop/Java Libs/build/java/x64"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
