--- a/Android/app/local.properties
+++ b/Android/app/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 10 21:34:58 CET 2017
-sdk.dir=C\:\\Users\\vince\\AppData\\Local\\Android\\Sdk
+#Mon Mar 12 08:42:27 CET 2018
+sdk.dir=C\:\\Users\\Fabian\\AppData\\Local\\Android\\Sdk
