--- a/Android/Jufo-location/app/src/main/AndroidManifest.xml
+++ b/Android/Jufo-location/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.fabian.jufolocation">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -23,7 +24,7 @@
         <service
             android:name=".Tracker"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
     </application>
 
 </manifest>
